--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^9.2.1",
     "browser-sync": "^2.29.3",
     "browser-sync-webpack-plugin": "^2.3.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
