--- a/package.json
+++ b/package.json
@@ -39,9 +39,13 @@
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
     "html-loader": "^5.1.0",
     "identity-obj-proxy": "^3.0.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --fix",
