--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "lint-staged": {
     "*.{js,jsx}": "eslint --fix",
     "*.{js,css}": "prettier --write"
-  }
+  },
+  "resolutions": {
+  "rollup": "npm:@rollup/wasm-node"
+}
 }
