--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "node-fetch": "^3.3.2",
     "prettier": "^3.4.2",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
