--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -11,8 +11,10 @@ jobs:
 
       - name: Install Packages
         run: |
+          cd frontend
           npm install
 
       - name: Lint check
         run: |
+          cd frontend
           npm run lint
